# AMR

./: README.md
amr/: CMakeLists.txt  package.xml
amr_binaries/: CMakeLists.txt  README.md  package.xml
amr_braitenberg/: BEHAVIORS.md  CMakeLists.txt  README.md  package.xml  setup.py
amr_braitenberg/cfg/: BraitenbergVehicle.cfg
amr_braitenberg/launch/: braitenberg.launch
amr_braitenberg/nodes/: braitenberg_vehicle.py  differential_drive_emulator.py
amr_braitenberg/src/amr_braitenberg/: braitenberg_vehicle.py
amr_bugs/: CMakeLists.txt  README.md  package.xml  setup.py
amr_bugs/cfg/: Wallfollower.cfg
amr_bugs/launch/: bug2.launch  wallfollower.launch
amr_bugs/nodes/: bug2.py  wallfollower.py
amr_bugs/src/amr_bugs/: bug_brain.py  bug_brain_visualizer.py  preemptable_state.py  wallfollower_state_machine.py
amr_localization/: CMakeLists.txt  package.xml  setup.py
amr_localization/launch/: particle_filter.launch  pose_likelihood_server.launch
amr_localization/nodes/: particle_filter_node.py  pose_likelihood_server.py
amr_localization/src/amr_localization/: motion_model.py  particle.py  particle_filter.py  particle_visualizer.py  pose.py  random_particle_generator.py
amr_mapping/: CMakeLists.txt  package.xml  setup.py
amr_mapping/include/: map_store.h  map_store_beam.h  map_store_circle.h  map_store_cone.h  map_store_error.h
amr_mapping/launch/: sonar_mapper.launch
amr_mapping/nodes/: occupancy_query_server.cpp  sonar_mapper.py
amr_mapping/src/: map_store.cpp  map_store_beam.cpp  map_store_bindings.cpp  map_store_circle.cpp  map_store_cone.cpp
amr_mapping/src/amr_mapping/: sonar_map.py
amr_msgs/: CMakeLists.txt
amr_msgs/msg/: Frontiers.msg
amr_navigation/: CMakeLists.txt  README.md  package.xml  setup.py
amr_navigation/launch/: motion_controller.launch  path_executor.launch  path_planner.launch
amr_navigation/nodes/: motion_controller.py  path_executor.py  path_planner.py  test_execute_path.py
amr_navigation/src/amr_navigation/: diff_velocity_controller.py  graph_visualizer.py  omni_velocity_controller.py  randomized_roadmap_planner.py  velocity_controller.py
amr_perception/: CMakeLists.txt  README.md  package.xml
amr_perception/cfg/: LaserRepublisher.cfg  ObstacleDetector.cfg
amr_perception/cfg/cpp/amr_perception/: LaserRepublisherConfig.h  ObstacleDetectorConfig.h
amr_perception/docs/: LaserRepublisherConfig-usage.dox  LaserRepublisherConfig.dox  LaserRepublisherConfig.wikidoc  ObstacleDetectorConfig-usage.dox  ObstacleDetectorConfig.dox  ObstacleDetectorConfig.wikidoc
amr_perception/nodes/: laser_republisher.cpp  obstacle_detector.cpp  obstacle_detector_youbot_simulation.cpp
amr_perception/src/amr_perception/cfg/: LaserRepublisherConfig.py  ObstacleDetectorConfig.py
amr_srvs/: CMakeLists.txt
amr_srvs/srv/: GetMultiplePoseLikelihood.srv
amr_stage/: CMakeLists.txt
amr_stage/nodes/: ranges_republisher.py  stage.cpp
amr_stage_worlds/models/: hokuyo.inc
amr_stage_worlds/worlds/: apartment.world  empty.world  octopus.world  rooms.world  simple.world  walls.world
amr_ui/: path
amr_ui/config/: bug2.rviz  explorer.rviz  motion-controller.rviz  particle-filter.rviz  path-planner.rviz  pose-likelihood-server.rviz  rviz-occupancy-query-server-config.vcg  sonar-mapper.rviz
amr_ui/nodes/: execute_path_client_stdin.py  occupancy_grid_display.py  occupancy_query_client_gui.py  plan_path_client_gui.py  pose_likelihood_display.py  pose_likelihood_display_multiple.py  sonar_simulator_gui.py
grades/: 20160416.md  20160423.md  20160430.md  20160507.md  20160521.md  20160528.md  20160611.md  20160618.md  20160625.md  20160704.md
time-reports/: 20160528  20160618
