<package>
  <name>amr_braitenberg</name>
  <version>1.0.0</version>
  <description>amr_braitenberg</description>
  <maintainer email="alexander.hagg@inf.h-brs.de">Alexander Hagg</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author>Alexander Hagg</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>amr_msgs</build_depend>
  <build_depend>amr_srvs</build_depend>
  <build_depend>amr_stage</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>amr_msgs</run_depend>
  <run_depend>amr_srvs</run_depend>
  <run_depend>amr_stage</run_depend>

</package>