<package>
  <name>amr_localization</name>
  <version>1.0.0</version>
  <description>amr_localization</description>
  <maintainer email="alexander.hagg@inf.h-brs.de">Alexander Hagg</maintainer>

  <license>BSD</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Alexander Hagg</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>amr_msgs</build_depend>
  <build_depend>amr_srvs</build_depend>
  <build_depend>amr_stage</build_depend>
  <build_depend>amr_mapping</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>amr_msgs</run_depend>
  <run_depend>amr_srvs</run_depend>
  <run_depend>amr_stage</run_depend>
  <run_depend>amr_mapping</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>amr_msgs</test_depend> -->
  <!-- <test_depend>amr_srvs</test_depend> -->
  <!-- <test_depend>amr_stage</test_depend> -->
  <!-- <test_depend>amr_mapping</test_depend> -->

</package>